--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="section section-light">
         <h2>Section One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur distinctio, blanditiis, iste adipisci voluptates architecto animi incidunt quidem iure ipsa ullam, similique minus. Perspiciatis quam, voluptatum atque tenetur numquam illo dicta. Aut sequi perspiciatis sit quisquam. Alias recusandae hic dolore rerum eum itaque laboriosam reprehenderit labore, nulla enim, suscipit unde molestias dolorem ratione nisi omnis quis eligendi earum quisquam explicabo libero velit, sequi blanditiis pariatur. Dolor unde quos in quo voluptatum aperiam excepturi consequuntur voluptate asperiores delectus ipsa modi iste libero nemo laudantium labore incidunt laboriosam corrupti, nesciunt dolorum? Adipisci cupiditate hic veritatis iure ut suscipit et eveniet, odio excepturi.</p>
+        <p>Appropriately maximize high-quality ideas rather than premier scenarios. Collaboratively disseminate turnkey quality vectors and synergistic platforms. Intrinsicly evolve intuitive niche markets whereas ubiquitous action items. Appropriately maximize high-quality ideas rather than premier scenarios. Collaboratively disseminate turnkey quality vectors and synergistic platforms. Intrinsicly evolve intuitive niche markets whereas ubiquitous action items.</p>
     </section>
 
     <div class="pimg2">
