--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="pimg1">
         <div class="ptext">
-            <span class="border">Parallax Website</span>
+            <span class="border">Downtown Buster Brown</span>
         </div>
     </div>
 
