--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Parallax Website</title>
+    <title>Nebullax</title>
 </head>
 <body>
     <div class="pimg1">
         <div class="ptext">
-            <span class="border">Downtown Buster Brown</span>
+            <span class="border">The Nebulaxx</span>
         </div>
     </div>
 
     <section class="section section-light">
-        <h2>Section One</h2>
+        <h2>I Couldn't Taste The Taste That I Was Tasting</h2>
         <p>Appropriately maximize high-quality ideas rather than premier scenarios. Collaboratively disseminate turnkey quality vectors and synergistic platforms. Intrinsicly evolve intuitive niche markets whereas ubiquitous action items. Appropriately maximize high-quality ideas rather than premier scenarios. Collaboratively disseminate turnkey quality vectors and synergistic platforms. Intrinsicly evolve intuitive niche markets whereas ubiquitous action items.</p>
     </section>
 
     <div class="pimg2">
         <div class="ptext">
-            <span class="border">Image Two Text</span>
+            <span class="border">The Boognish</span>
         </div>
     </div>
 
     <section class="section section-dark">
-        <h2>Section One</h2>
+        <h2>I Couldn't Hear The Waste That I Was Making</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur distinctio, blanditiis, iste adipisci voluptates architecto animi incidunt quidem iure ipsa ullam, similique minus. Perspiciatis quam, voluptatum atque tenetur numquam illo dicta. Aut sequi perspiciatis sit quisquam. Alias recusandae hic dolore rerum eum itaque laboriosam reprehenderit labore, nulla enim.</p>
     </section>
 
     <div class="pimg3">
         <div class="ptext">
-            <span class="border">Image Three Text</span>
+            <span class="border">The Boognish</span>
         </div>
     </div>
 
     <section class="section section-dark">
-        <h2>Section One</h2>
+        <h2>Tired Of The Life That I Was Facing</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur distinctio, blanditiis, iste adipisci voluptates architecto animi incidunt quidem iure ipsa ullam, similique minus. Perspiciatis quam, voluptatum atque tenetur numquam illo dicta. Aut sequi perspiciatis sit quisquam. Alias recusandae hic dolore rerum eum itaque laboriosam reprehenderit labore, nulla enim.</p>
     </section>
 
