--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="pimg1">
         <div class="ptext">
-            <span class="border">The Nebulaxx</span>
+            <span class="border">The Nebullax</span>
         </div>
     </div>
 
